# pyflim

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
pyflim/: flimds.py  functions.py  misc.py  pawflim.py  plot.py  simulation.py
pyflim/io/: functions.py  pq_header.py  pq_numba.py
pyflim/io/becker_hickl/: __init__.py  bh_header.py  bh_numba.py
pyflim/io/picoquant/: __init__.py  pq_header.py  pq_numba.py
pyflim/tests/io/: picoquant.py  ptu_example.ptu
pyflim/tests/io/picoquant/: picoquant.py  pt3_example.json  ptu_example.json  ptu_example.npz
