[metadata]
name = pyflim
version = 0.0.1
author = Mauro Silberberg
author_email = maurosilber@gmail.com
license = MIT
description = 
long_description = file: README.rst
keywords = FLIM, phasor, pawFLIM, science
url = https://github.com/maurosilber/pyflim
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = pyflim
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    numba
    binlets
test_suite = pyflim.tests

[options.extras_require]
test =
    pytest
    matplotlib
dev = 
    pytest
    pre-commit

[bdist_wheel]
universal = 1

[flake8]
ignore=
    E203 # whitespace before ':' - doesn't work well with black
    E402
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
per-file-ignores =
    # imported but unused
    __init__.py: F401

[isort]
default_section=THIRDPARTY
known_first_party=pyflim
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
